unify test resources, move java string to files for standalone and client config, required processors missing fix